--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
-body {
-  background-color: gray;
+img {
+  width: 25px;
 }
 
 h2 {
@@ -10,8 +10,30 @@ h3 {
   color: red;
 }
 
+header {
+  line-height: 40px;
+  height: 50px;
+  width: 100%;
+}
+
+.header_right a {
+  padding: 15px;
+}
+
+.header_right a select {
+  border: 0;
+}
+
 a {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
 
