--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,6 @@
 $coloretitoli: red;
-body{
-    background-color: gray;
+img{
+    width: 25px;
 }
 h2{
     color: $coloretitoli;
@@ -8,5 +8,22 @@ h2{
 h3{
     color: $coloretitoli;
 }
+header{
+    line-height: 40px;
+    height: 50px;
+    width: 100%;
+}
+.header_left{
+
+}
+.header_right{
+    a{
+        padding: 15px;
+        select{
+            border: 0;
+        }
+    }
+}
+
 
 @import 'partials/_basic';
