--- a/src/partials/_basic.scss
+++ b/src/partials/_basic.scss
@@ -1,9 +1,25 @@
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+// }
 a{
     text-decoration-line: none;
+    color: black;
 }
 .left{
     float: left;
 }
 .right{
     float: right;
+}
+.container{
+    width: 1200px;
+    margin:auto;
+}
+.padzero{
+    padding: 0;
+}
+.invisible{
+    display: none;
 }
