--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,4 +1,40 @@
 header{
-    display: flex;
-    justify-content: space-between;
+    line-height: 40px;
+    height: 50px;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid grey;
+    img{
+        width: 25px;
+        position: absolute;
+        top: 5px;
+    }
+}
+.header_left{
+    a{
+        padding-left: 35px;
+    }
+}
+.header_right{
+    a{
+        padding: 15px;
+        select{
+            border: 0;
+        }
+        button{
+            color: blue;
+            padding: 10px;
+            width: 100px;
+            border-radius: 10%;
+            position: relative;
+            background-color: white;
+            &:hover{
+                background-color: blue;
+                color: white;
+            }
+            img{
+                left: 8px;
+            }
+        }
+    }
 }
