--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,3 @@
-h2 {
-  color: red;
-}
-
 a {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
@@ -118,5 +114,21 @@ main .sfondo {
   height: 400px;
   background-size: cover;
   background-image: url("https://teambit.io/wp-content/themes/teambeat/img/illustration-main.jpg");
+}
+
+footer {
+  float: left;
+  height: 500px;
+  width: 100%;
+  border: 1px solid gray;
+  padding-top: 20px;
+}
+
+footer .tab {
+  float: right;
+  width: 15%;
+  height: 100%;
+  background-color: red;
+  border: 1px solid black;
 }
 
