--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,6 +29,10 @@ body {
   color: #58402c;
 }
 
+.blue {
+  color: blue;
+}
+
 header {
   line-height: 40px;
   height: 50px;
@@ -120,15 +124,33 @@ footer {
   float: left;
   height: 500px;
   width: 100%;
-  border: 1px solid gray;
   padding-top: 20px;
 }
 
+footer .primo {
+  width: 26%;
+  float: left;
+  position: relative;
+}
+
+footer .primo img {
+  width: 50px;
+  position: absolute;
+  top: 5px;
+  height: 50px;
+}
+
+footer .primo p {
+  padding-left: 55px;
+}
+
 footer .tab {
-  float: right;
-  width: 15%;
+  float: left;
+  width: 13%;
   height: 100%;
-  background-color: red;
-  border: 1px solid black;
+  margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+  line-height: 28px;
 }
 
