finito section.second

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,10 @@ a {
   color: black;
 }
 
+a:hover {
+  color: lightblue;
+}
+
 .left {
   float: left;
 }
@@ -31,6 +35,11 @@ body {
 
 .blue {
   color: blue;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
 
 header {
@@ -120,11 +129,32 @@ main .sfondo {
   background-image: url("https://teambit.io/wp-content/themes/teambeat/img/illustration-main.jpg");
 }
 
+section.second {
+  float: left;
+  margin-top: 100px;
+  height: 600px;
+  width: 100%;
+  text-align: center;
+  background: #cfd7ef;
+}
+
+section.second .immagine {
+  margin: 0 5%;
+  width: calc(70%/ 6 - 4px);
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+section.second .immaginesotto {
+  margin: auto;
+  width: 20%;
+}
+
 footer {
   float: left;
   height: 500px;
   width: 100%;
-  padding-top: 20px;
+  margin-top: 100px;
 }
 
 footer .primo {
