--- a/src/app.scss
+++ b/src/app.scss
@@ -2,4 +2,5 @@
 @import 'partials/_basic';
 @import 'partials/_header';
 @import 'partials/_main';
+@import 'partials/_section2';
 @import 'partials/_footer';
