--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -3,7 +3,7 @@ footer{
     height: 500px;
     width: 100%;
     // border: 1px solid gray;
-    padding-top: 20px;
+    margin-top: 100px;
     .primo{
         width: 26%;
         float: left;
